2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc (do_chroot_jail): paranoia security for webserver
	use. Patch by Sebastiano Vigna <vigna@dsi.unimi.it>.

2005-03-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/bin/add-html-footer.py (do_file): make wiki link optional.

	* lily/pdf.cc: remove PDF related files

2005-03-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/deutsch.ly: add quarter tones, patch by Arno Waschk.
	<hamamatsu@gmx.de>

2005-03-05  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced-notation.itely: first draft
	of reorg done.

	* Documentation/user/global.itely: fixed (sub)section
	bits of MIDI.

2005-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel (extras): Bufix (Bertalan).

	* Documentation/user/basic-notation.itely (Chords): @ref fix.
	* Documentation/user/instrument-notation.itely (Introducing chord
	names): Compile fix: must have unique name.

2005-03-02  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/instrument-notation.itely: reorg.

2005-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm:
	* scm/output-svg.scm: Fix font scaling.

2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ly/titling-init.ly (tagline): Use Engraving.  Add comment about
	what link to use best.

	* Documentation/user/instrument-notation.itely (Ancient accidentals): 
	* Documentation/user/tutorial.itely (Automatic and manual beams):
	Fix @ref.

	* lily/tweak-registration.cc (replace_grob_tweak): New function.
	* lily/tweak-registration-scheme.cc (LY_DEFINE): Wrap it.
	* scm/framework-gnome.scm (tweak): Use it.

2005-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): elucidate GS problem.

	* scm/output-ps.scm (white-text): reinstate white-text

2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (offset-add): Remove.

	* scm/lily-library.scm (offset-flip-y): New function.
	* scm/framework-gnome.scm (tweak): Use it.
